--- a/source/R5T.F0036.F001/R5T.F0036.F001.csproj
+++ b/source/R5T.F0036.F001/R5T.F0036.F001.csproj
@@ -13,8 +13,7 @@
     <RepositoryUrl>https://github.com/SafetyCone/R5T.F0036.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\R5T.F0036.F001\R5T.F0036.F001.csproj" />
-    <ProjectReference Include="..\R5T.F0036.F002\R5T.F0036.F002.csproj" />
-    <ProjectReference Include="..\R5T.F0036.T000\R5T.F0036.T000.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0142\source\R5T.T0142\R5T.T0142.csproj" />
+    <ProjectReference Include="..\R5T.F0036.F000\R5T.F0036.F000.csproj" />
   </ItemGroup>
 </Project>
