--- a/source/R5T.F0036.F002/R5T.F0036.F002.csproj
+++ b/source/R5T.F0036.F002/R5T.F0036.F002.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
@@ -13,8 +13,8 @@
     <RepositoryUrl>https://github.com/SafetyCone/R5T.F0036.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\R5T.F0036.F001\R5T.F0036.F001.csproj" />
-    <ProjectReference Include="..\R5T.F0036.F002\R5T.F0036.F002.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0132\source\R5T.T0132\R5T.T0132.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0147\source\R5T.T0147.T000\R5T.T0147.T000.csproj" />
     <ProjectReference Include="..\R5T.F0036.T000\R5T.F0036.T000.csproj" />
   </ItemGroup>
 </Project>
