--- a/source/R5T.F0036.T000/R5T.F0036.T000.csproj
+++ b/source/R5T.F0036.T000/R5T.F0036.T000.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
     <Version>1.0.0</Version>
@@ -13,8 +13,7 @@
     <RepositoryUrl>https://github.com/SafetyCone/R5T.F0036.git</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\R5T.F0036.F001\R5T.F0036.F001.csproj" />
-    <ProjectReference Include="..\R5T.F0036.F002\R5T.F0036.F002.csproj" />
-    <ProjectReference Include="..\R5T.F0036.T000\R5T.F0036.T000.csproj" />
+    <ProjectReference Include="..\..\..\R5T.NG0002\source\R5T.NG0002\R5T.NG0002.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0142\source\R5T.T0142\R5T.T0142.csproj" />
   </ItemGroup>
 </Project>
